// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default 1`] = `
<div
  id="default"
/>
`;

exports[`Render for method: {"name":"open","args":{"content":"Args message content"}} - default 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-success">
            <span role="img"
                  aria-label="check-circle"
                  class="anticon anticon-check-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="check-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z">
                </path>
              </svg>
            </span>
            <span>
              Args message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"content":"Args message content"}} - properties.content 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-success">
            <span role="img"
                  aria-label="check-circle"
                  class="anticon anticon-check-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="check-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z">
                </path>
              </svg>
            </span>
            <span>
              Args message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"content":"Args message content"}} - properties.duration 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-success">
            <span role="img"
                  aria-label="check-circle"
                  class="anticon anticon-check-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="check-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z">
                </path>
              </svg>
            </span>
            <span>
              Args message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"content":"Args message content"}} - properties.icon 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-success">
            <span role="img"
                  aria-label="loading-3-quarters"
                  id="properties.icon_icon"
                  class="anticon anticon-loading-3-quarters {&quot;style&quot;:[{},null]}"
            >
              <svg viewbox="0 0 1024 1024"
                   focusable="false"
                   class="anticon-spin"
                   data-icon="loading-3-quarters"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z">
                </path>
              </svg>
            </span>
            <span>
              Args message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: error 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-error">
            <span role="img"
                  aria-label="close-circle"
                  class="anticon anticon-close-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="close-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z">
                </path>
              </svg>
            </span>
            <span>
              Args message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: info 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-info">
            <span role="img"
                  aria-label="info-circle"
                  class="anticon anticon-info-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="info-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z">
                </path>
              </svg>
            </span>
            <span>
              Args message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: loading 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-loading">
            <span role="img"
                  aria-label="loading"
                  class="anticon anticon-loading"
            >
              <svg viewbox="0 0 1024 1024"
                   focusable="false"
                   class="anticon-spin"
                   data-icon="loading"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z">
                </path>
              </svg>
            </span>
            <span>
              Args message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"content":"Args message content"}} - properties.status: warning 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-warning">
            <span role="img"
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="exclamation-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z">
                </path>
              </svg>
            </span>
            <span>
              Args message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"duration":1}} - default 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-success">
            <span role="img"
                  aria-label="check-circle"
                  class="anticon anticon-check-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="check-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z">
                </path>
              </svg>
            </span>
            <span>
              default
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"duration":1}} - properties.content 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-success">
            <span role="img"
                  aria-label="check-circle"
                  class="anticon anticon-check-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="check-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"duration":1}} - properties.duration 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-success">
            <span role="img"
                  aria-label="check-circle"
                  class="anticon anticon-check-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="check-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"duration":1}} - properties.icon 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-success">
            <span role="img"
                  aria-label="loading-3-quarters"
                  id="properties.icon_icon"
                  class="anticon anticon-loading-3-quarters {&quot;style&quot;:[{},null]}"
            >
              <svg viewbox="0 0 1024 1024"
                   focusable="false"
                   class="anticon-spin"
                   data-icon="loading-3-quarters"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"duration":1}} - properties.status: error 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-error">
            <span role="img"
                  aria-label="close-circle"
                  class="anticon anticon-close-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="close-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"duration":1}} - properties.status: info 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-info">
            <span role="img"
                  aria-label="info-circle"
                  class="anticon anticon-info-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="info-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"duration":1}} - properties.status: loading 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-loading">
            <span role="img"
                  aria-label="loading"
                  class="anticon anticon-loading"
            >
              <svg viewbox="0 0 1024 1024"
                   focusable="false"
                   class="anticon-spin"
                   data-icon="loading"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"duration":1}} - properties.status: warning 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-warning">
            <span role="img"
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="exclamation-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"status":"warning"}} - default 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-warning">
            <span role="img"
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="exclamation-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z">
                </path>
              </svg>
            </span>
            <span>
              default
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"status":"warning"}} - properties.content 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-warning">
            <span role="img"
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="exclamation-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"status":"warning"}} - properties.duration 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-warning">
            <span role="img"
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="exclamation-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"status":"warning"}} - properties.icon 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-warning">
            <span role="img"
                  aria-label="loading-3-quarters"
                  id="properties.icon_icon"
                  class="anticon anticon-loading-3-quarters {&quot;style&quot;:[{},null]}"
            >
              <svg viewbox="0 0 1024 1024"
                   focusable="false"
                   class="anticon-spin"
                   data-icon="loading-3-quarters"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"status":"warning"}} - properties.status: error 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-warning">
            <span role="img"
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="exclamation-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"status":"warning"}} - properties.status: info 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-warning">
            <span role="img"
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="exclamation-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"status":"warning"}} - properties.status: loading 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-warning">
            <span role="img"
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="exclamation-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{"status":"warning"}} - properties.status: warning 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-warning">
            <span role="img"
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="exclamation-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{}} - default 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-success">
            <span role="img"
                  aria-label="check-circle"
                  class="anticon anticon-check-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="check-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z">
                </path>
              </svg>
            </span>
            <span>
              default
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{}} - properties.content 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-success">
            <span role="img"
                  aria-label="check-circle"
                  class="anticon anticon-check-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="check-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{}} - properties.duration 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-success">
            <span role="img"
                  aria-label="check-circle"
                  class="anticon anticon-check-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="check-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{}} - properties.icon 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-success">
            <span role="img"
                  aria-label="loading-3-quarters"
                  id="properties.icon_icon"
                  class="anticon anticon-loading-3-quarters {&quot;style&quot;:[{},null]}"
            >
              <svg viewbox="0 0 1024 1024"
                   focusable="false"
                   class="anticon-spin"
                   data-icon="loading-3-quarters"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{}} - properties.status: error 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-error">
            <span role="img"
                  aria-label="close-circle"
                  class="anticon anticon-close-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="close-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{}} - properties.status: info 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-info">
            <span role="img"
                  aria-label="info-circle"
                  class="anticon anticon-info-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="info-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{}} - properties.status: loading 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-loading">
            <span role="img"
                  aria-label="loading"
                  class="anticon anticon-loading"
            >
              <svg viewbox="0 0 1024 1024"
                   focusable="false"
                   class="anticon-spin"
                   data-icon="loading"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render for method: {"name":"open","args":{}} - properties.status: warning 1`] = `
<div>
  <div class="ant-message">
    <span>
      <div class="ant-message-notice {} move-up-enter">
        <div class="ant-message-notice-content">
          <div class="ant-message-custom-content ant-message-warning">
            <span role="img"
                  aria-label="exclamation-circle"
                  class="anticon anticon-exclamation-circle"
            >
              <svg viewbox="64 64 896 896"
                   focusable="false"
                   class
                   data-icon="exclamation-circle"
                   width="1em"
                   height="1em"
                   fill="currentColor"
                   aria-hidden="true"
              >
                <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z">
                </path>
              </svg>
            </span>
            <span>
              Message content
            </span>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Render properties.content 1`] = `
<div
  id="properties.content"
/>
`;

exports[`Render properties.duration 1`] = `
<div
  id="properties.duration"
/>
`;

exports[`Render properties.icon 1`] = `
<div
  id="properties.icon"
/>
`;

exports[`Render properties.status: error 1`] = `
<div
  id="properties.status: error"
/>
`;

exports[`Render properties.status: info 1`] = `
<div
  id="properties.status: info"
/>
`;

exports[`Render properties.status: loading 1`] = `
<div
  id="properties.status: loading"
/>
`;

exports[`Render properties.status: warning 1`] = `
<div
  id="properties.status: warning"
/>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;

exports[`Test Schema properties.duration 1`] = `true`;

exports[`Test Schema properties.duration 2`] = `null`;

exports[`Test Schema properties.icon 1`] = `true`;

exports[`Test Schema properties.icon 2`] = `null`;

exports[`Test Schema properties.status: error 1`] = `true`;

exports[`Test Schema properties.status: error 2`] = `null`;

exports[`Test Schema properties.status: info 1`] = `true`;

exports[`Test Schema properties.status: info 2`] = `null`;

exports[`Test Schema properties.status: loading 1`] = `true`;

exports[`Test Schema properties.status: loading 2`] = `null`;

exports[`Test Schema properties.status: warning 1`] = `true`;

exports[`Test Schema properties.status: warning 2`] = `null`;
